[package]
name = "shy"
version = "0.1.0"
authors = ["PaulChernoch-Shell <pchernoch@shelltechworks.com>"]
edition = "2018"

[dependencies]
itertools = "*"
spectral = "0.6.0"
custom_derive = "0.1.7"
enum_derive = "0.1.7"
lazy_static = "1.4.0"
regex = "1.3"
rand = "0.7.2"
serde = "1.0"
serde_json = "1.0.41"
actix-web = "1.0"
chrono = "0.4"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_warn", "std", "serde"] }
env_logger = "0.7"
